use lineage lpm charger
Change-Id: Ib0f3d891a9e4f8677f2b32e3439b713740951739

--- a/config/init/init.exynos7904.root.rc
+++ b/config/init/init.exynos7904.root.rc
@@ -2049,7 +2049,7 @@ on property:ro.debuggable=1
     start console
 
 # LPM
-service lpm /system/bin/lpm
+service lpm /system/bin/charger
     class sec-charger
     user root
     group system radio input
